name:                attoparsec-csv
version:             0.1.0.0
license:             OtherLicense
license-file:        LICENSE-2.0.txt
author:              Robin Bate Boerop
maintainer:          me@robinbb.com
category:            Text
build-type:          Simple
cabal-version:       >=1.8

library
  build-depends: base ==4.5.*
               , text
               , attoparsec   
  exposed-modules: Text.ParseCSV
